--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </nav>
         <div id="about">
             <h2> About me </h2>
-            <p> Hello, my name is {your name here}.
+            <p> Hello, my name is Steven Urbano.
             Welcome to my code portfolio! </p>
         </div>
         
